2009-01-07  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs/ReplaceInFilesDialog.cs: Don't use
	IsValidFileName to check the file name since it will fail if the name
	contains wildcards.

2009-01-07  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Commands/RefactoryCommands.cs:
	* MonoDevelop.Ide.Gui.Content/ITextEditorResolver.cs: Worked on on the
	fly type resolving.

2009-01-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Commands/RefactoryCommands.cs: fixed "Bug 443771 - Go
	to declaration not working for base () calls".

2009-01-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui.Search/DefaultFind.cs:
	* MonoDevelop.Ide.Gui.Pads/SearchResultPad.cs:
	* MonoDevelop.Ide.Gui.Search/SearchOptions.cs:
	* MonoDevelop.Ide.Gui.Search/KMPSearchStrategy.cs:
	* MonoDevelop.Ide.Gui.Search/BruteForceSearchStrategy.cs: Fixed 'Bug
	456429 - Search and replace broken again'.

2009-01-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Commands/RefactoryCommands.cs: worked on "Bug 456372 -
	Exception in refactoring of a class name from missed reference".

2009-01-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/DocumentSwitcher.cs: fixed "Bug 462848 -
	Monodevelop crash when Alt-Tab with Welcome page opened".

2009-01-02  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/Document.cs:
	* MonoDevelop.Ide.Gui/Workbench.cs:
	* MonoDevelop.Ide.Gui/DefaultWorkbench.cs:
	* MonoDevelop.Ide.Gui.Dialogs/NewProjectDialog.cs:
	* MonoDevelop.Ide.Gui.OptionPanels/LoadSavePanel.cs:
	* MonoDevelop.Ide.ExternalTools/ExternalToolPanel.cs:
	* MonoDevelop.Ide.Gui.Dialogs/ReplaceInFilesDialog.cs:
	* MonoDevelop.Ide.Gui.Pads.ProjectPad/SystemFileNodeBuilder.cs:
	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFileNodeBuilder.cs:
	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFolderNodeBuilder.cs: Use
	IsValidFilePath instead of IsValidFileName when checking a path.
