@@ -256,10 +256,10 @@ FILES =  \
 	MonoDevelop.Ide.Gui/DefaultWorkbench.cs \
 	MonoDevelop.Ide.Gui/DisplayBindingService.cs \
 	MonoDevelop.Ide.Gui/Document.cs \
+	MonoDevelop.Ide.Gui/DocumentNavigationPoint.cs \
 	MonoDevelop.Ide.Gui/DocumentSwitcher.cs \
 	MonoDevelop.Ide.Gui/DragNotebook.cs \
 	MonoDevelop.Ide.Gui/ExitEventHandler.cs \
-	MonoDevelop.Ide.Gui/FileNavigationPoint.cs \
 	MonoDevelop.Ide.Gui/FileViewer.cs \
 	MonoDevelop.Ide.Gui/HelpOperations.cs \
 	MonoDevelop.Ide.Gui/HelpViewer.cs \
